1999-05-31  Dominique Dumont  <domi@barrayar.grenoble.hp.com>

	* ObjScanner.pm: 
	- Better support of complex (perl wise) objects
	- added 'destroyable' parameters
	- updated 'CAVEATS' doc

1999-04-29  Dominique Dumont  <domi@barrayar.grenoble.hp.com> v1.014

	* ObjScanner.pm (element): Support REF and SCALAR, and does not
 	choke on GLOB ,CODE.

1999-04-21  Dominique Dumont  <domi@barrayar.grenoble.hp.com> v1.013

	* ObjScanner.pm : Complete re-write. It now uses HList instead of 
	data dumper.

1999-01-20  Dominique Dumont  <domi@barrayar.grenoble.hp.com> v1.11

	* ObjScanner.pm: removed dependance on Tk::Multi, better doc,
          don't wrap lines in Text widget.

v0.5: 1998-08-18  Dominique Dumont  <domi@barrayar.grenoble.hp.com>

	* ObjScanner.pm: simplified and adapted for new Multi::Text

1998-06-25  Dominique Dumont  <domi@barrayar.grenoble.hp.com>

	* 0.4 cleanup remaining traces in test.pl

Tue Mar 17 15:09:42 1998  Dominique Dumont  <domi@marlis.grenoble.hp.com>

	* 0.3 : Accepts '-stuff' parameters (instead of 'stuff')

Thu Feb 12 18:07:00 1998  Dominique Dumont  <domi@marlis.grenoble.hp.com>

	* 0.2 : Patch made by Achim Bohnet (Thanks)

	o removed AutoLoadeer because
	don't use AutoLoader for 3 little function
	defs.  Every 'use AutoLoader' does search auto/mod/ule/autoload.ix
	in @INC.  I think that this is much more expensive than having perl
        compile the 3 subs (Tom C. mentioned that perl can compile ~10000
	lines/sec).

	o use Data::Dumper only when needed:  
	startup gain with replace of 'use Data::Dumper'
	and use 'require Data::Dumper in sub listScan.

	o 2 little POD fixes

	o Makefile.PL: Tk::Multi does not exist. Changed to check for Tk::Multi::Text


Fri Feb  6 18:15:06 1998  Dominique Dumont  <domi@marlis.grenoble.hp.com>

	* 0.1 Beta version. Better AutoLoader usage. Fix minor problem
	to smooth inheriting Tk::ObjScanner

0.02 Mon 1.12.1997
        - bug fix
        - better README

0.01  Wed Jul 23 17:02:08 1997